fix: add back padding on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,6 +115,8 @@
 .prose {
   max-width: 80ch;
   width: 100%;
+
+  @apply px-4;
 }
 
 .prose {
